<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    android:scaleX="1"
    android:scaleY="1">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        style="@style/style_tv_title"
        android:text="Game Of Fiften"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_start"
        style="@style/style_main_fragment_button"

        android:layout_marginTop="@dimen/_64sdp"
        android:text="@string/start"
        app:icon="@drawable/ic_start"
        app:layout_constraintBottom_toTopOf="@+id/button_records"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_records"
        style="@style/style_main_fragment_button"
        android:text="@string/records"
        app:icon="@drawable/ic_statistics"
        app:layout_constraintBottom_toTopOf="@+id/button_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_settings"
        style="@style/style_main_fragment_button"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings"
        app:layout_constraintBottom_toTopOf="@+id/button_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_records" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_about"
        style="@style/style_main_fragment_button"
        android:text="@string/about"
        app:icon="@drawable/ic_about"
        app:layout_constraintBottom_toTopOf="@+id/button_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_settings" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_exit"
        style="@style/style_main_fragment_button"
        android:text="@string/exit"
        app:icon="@drawable/ic_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_about" />

</androidx.constraintlayout.widget.ConstraintLayout>