<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_dialog_winner"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/celia_garcia"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_32ssp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_16sdp"
            android:fontFamily="@font/celia_garcia"
            android:text="@string/dialog_quit_game"
            android:textColor="@color/black"
            android:textSize="@dimen/_24ssp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_exit_no"
                style="@style/style_restart_pause_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_weight="1"
                android:backgroundTint="@drawable/restart_bg"

                android:text="@string/no"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:icon="@drawable/ic_check_off" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_exit_yes"
                style="@style/style_restart_pause_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:backgroundTint="@drawable/restart_bg"
                android:text="@string/yes"

                android:textColor="@color/white"
                android:textStyle="bold"
                app:icon="@drawable/ic_check" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>